opdatering til tokes opholdssted.
frikadellemenu virker, lidt mere responsivt shit, medarbejder underside
pretty much done.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
     <header>
         <div id="headerwrapper">
-            <a href="index.php">
-
+            <a href="index.html">
+                <img src="img/templogo.png" alt="Landmark logo" id="logo">
             </a> 
 
             <ul class="desknav">
@@ -37,7 +37,7 @@
                 <div class="toggleclose"></div>
                 <div class="marginwrap">
                     <ul class="burgerlist">
-                        <li><a href="index.html"><span style="color: #7c7c7c">◄</span>Hjem</a></li>
+                        <li><a href="index.html"><span>◄</span>Hjem</a></li>
                         <li><a href="verdigrundlag.html">Værdigrundlag</a></li>
                         <li><a href="personale.html">Personale</a></li>
                     </ul>
@@ -60,7 +60,7 @@
 
         <section class="fulltextsection">
             <div class="fulltextboxwrapper">
-                <h1>Ungdomsstedet Landmark</h1>
+                <h1>Opholdsstedet Landmark</h1>
                 <p>Landmark er godkendt til 6 pladser til unge mellem 13-18 år med mulighed for forlængelse til de bliver 23 år. Det er unge med psykiske, sociale, adfærdsmæssige og/eller indlæringsmæssige problemer samt unge med misbrugsproblematikker. <br><br>
                     Vi holder til i et stort lækkert hus på en stor grund, hvor en del af grunden er anlagt til have med div. hyggekroge, køkkenhave og bålplads. Ud over det har vi 2 ha jord, hvor vi har heste gående.<br><br> Huset ligger lige op til skoven. Det er muligt at tage cyklen igennem skoven til stranden og til Juelsminde på et kvarter. Der er busforbindelse til Horsens, Hedensted, Juelsminde og Vejle. Huset er i 2 plan og fremstår lyst og hyggeligt med stort køkken, stor spisestue med brændeovn og udgang til terrasse, flere stuer og store lyse værelser til de unge. De unge er med til at indrette deres værelse ved indflytning.<br><br> Landmark skal kendetegnes ved en høj engagement, trivsel både hos medarbejderne og de unge. Vi har derfor hele tiden fokus på udvikling af medarbejdernes kompetencer og trivsel gennem uddannelse og supervision. Vi arbejder relations orienteret, da en god relation, efter vores mening, er grundlaget for alt pædagogisk udvikling. Vi arbejder med afsæt i KRAP, samt en holistisk viden og tilgang til unge med emotionelle vanskeligheder, herunder miljøterapeutiske arbejdsmetoder.</p>
             </div>
@@ -70,6 +70,13 @@
             <div class="overlay" onClick="style.pointerEvents='none'"></div>
 
             <div id="map"></div>
+            <aside id="mapadress">
+                <ul>
+                    <li><h4>Adresse</h4></li>
+                    <li>Lottrupvej 8</li>
+                    <li>7130 Juelsminde</li>
+                </ul>
+            </aside>
         </div>
 
         <section class="textsectiondouble">
@@ -90,10 +97,10 @@
 
         <div class="clear"></div>
 
-
+        <img src="img/indenfor1.jpg" class="fullpic">
 
     </main>
-
+    <div class="clear"></div>
     <footer>
         <p>© Copyright 2017 - Opholdsstedet Landmark</p>
     </footer>
