--- a/verdigrundlag.html
+++ b/verdigrundlag.html
@@ -20,8 +20,8 @@
 <body>
     <header>
         <div id="headerwrapper">
-            <a href="index.php">
-
+            <a href="index.html">
+                <img src="img/templogo.png" alt="Landmark logo" id="logo">
             </a> 
 
             <ul class="desknav">
@@ -37,7 +37,7 @@
                 <div class="toggleclose"></div>
                 <div class="marginwrap">
                     <ul class="burgerlist">
-                        <li><a href="index.html"><span style="color: #7c7c7c">◄</span>Hjem</a></li>
+                        <li><a href="index.html"><span>◄</span>Hjem</a></li>
                         <li><a href="verdigrundlag.html">Værdigrundlag</a></li>
                         <li><a href="personale.html">Personale</a></li>
                     </ul>
