--- a/personale.html
+++ b/personale.html
@@ -20,8 +20,8 @@
 <body>
     <header>
         <div id="headerwrapper">
-            <a href="index.php">
-
+            <a href="index.html">
+                <img src="img/templogo.png" alt="Landmark logo" id="logo">
             </a> 
 
             <ul class="desknav">
@@ -37,7 +37,7 @@
                 <div class="toggleclose"></div>
                 <div class="marginwrap">
                     <ul class="burgerlist">
-                        <li><a href="index.html"><span style="color: #7c7c7c">◄</span>Hjem</a></li>
+                        <li><a href="index.html"><span>◄</span>Hjem</a></li>
                         <li><a href="verdigrundlag.html">Værdigrundlag</a></li>
                         <li><a href="personale.html">Personale</a></li>
                     </ul>
@@ -47,11 +47,31 @@
     </header>
 
     <main>
-
+        <section class="employeesection">
+            <img src="img/medarbejder/toke.jpg">
+            <div class="employeetext">
+                <h4>Toke Martin Kensmark</h4>
+                <p>Toke Martin Kensmark er uddannet murer og har haft eget murer firma i mange år. Toke har en bred erfaring inden for det socialpædagogiske felt, bland andet med hjemløse, udviklingshæmmede og unge på socialpædagogiske opholdssteder. Toke er i gang med 2. år på Meritpædagoguddannelsen.</p>
+            </div>
+        </section>
+        <section class="employeesection">
+            <img src="img/medarbejder/toke.jpg" class="employeeleft">
+            <div class="employeetext floatnone">
+                <h4>Bente Surland</h4>
+                <p>Bente Surland er uddannet pædagog. Bente har diplom i ledelse og hun har en bred erhvervserfaring både i forhold til pædagogik og ledelse, blandt andet fra familiebehandling, ungdomspsykiatri og som kommunal områdeleder og enhedsleder.</p>
+            </div>
+        </section>
+        <section class="employeesection">
+            <img src="img/medarbejder/toke.jpg">
+            <div class="employeetext">
+                <h4>Christian Bonde Jensen</h4>
+                <p>Ham der laver hjemmesiden og tydeligvis det mest betydningsfulde individ i dette etablissement.</p>
+            </div>
+        </section>
     </main>
 
     <footer>
-
+        <p>© Copyright 2017 - Opholdsstedet Landmark</p>
     </footer>
 
 
